--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.8.1",
-    "recharts": "^2.8.0"
+    "recharts": "^2.8.0",
+    "tone": "^15.1.22"
   },
   "devDependencies": {
     "@types/react": "^18.2.15",
